# OpenModels

./: .gitignore  CLAUDE.md  Cargo.toml  README.ja.md  README.md  requirements-dev.txt
docs/: adr-001-rust-migration-strategy.md  openapi-first-comparison.md  phase-0-foundation.md  phase-1-dsl-and-ir.md  phase-2-ingestion-and-diagnostics.md  phase-3-orm-adapters.md  phase-4-migration-and-mappers.md  phase-5-release-readiness.md  quickstart.md  release-policy.md  rust-rewrite-bootstrap.md  seaorm-phase-1-contract.md  seaorm-phase-2-entities.md  seaorm-phase-3-relations.md  seaorm-phase-4-fixtures.md  spec.md  workflows.md
examples/: README.md
openmodels/: __init__.py  adapter.py  cli.py  common.py  drizzle.py  generate.py  loader.py  mappers.py  migration.py  model_io.py  normalize.py  registry.py  rust_cli.py  seaorm.py
rust/openmodels-rs/: Cargo.toml
rust/openmodels-rs/src/: adapter.rs  drizzle.rs  error.rs  generate.rs  lib.rs  main.rs  mappers.rs  migration.rs  model.rs  model_io.rs  normalize.rs  openapi.rs  registry.rs  schema.rs  seaorm.rs  utils.rs  validate.rs
rust/openmodels-rs/tests/: bootstrap.rs
schemas/: canonical-model.schema.json  x-openmodels.schema.json
scripts/: check_seaorm_fixture.py  generate_mappers.py  generate_models.py  plan_migration.py  validate_examples.py
tests/: test_drizzle_branches.py  test_error_paths.py  test_generation.py  test_ingestion.py  test_mapper_branches.py  test_migration_branches.py  test_phase4.py  test_phase5.py  test_rust_parity.py  test_scripts.py  test_seaorm_branches.py  test_seaorm_phase1.py  (+4 more)
(+9 files in other folders)
