[package]
name = "openmodels-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indexmap = { version = "2.8", features = ["serde"] }
jsonschema = { version = "0.18", features = ["draft202012"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.15"
